login, logout completi e funzionanti, aggiunta rotta privata per admin, corretti bug relativi allo scambio di jtw

--- a/web-server/private/user.html
+++ b/web-server/private/user.html
@@ -11,7 +11,7 @@
             <ul>
                 <li><a href="film.html">Film in programmazione</a></li>
                 <li><a href="prenotazioni.html">Le mie prenotazioni</a></li>
-                <li><a href="logout.html">Logout</a></li>
+                <li><a href="/api/logout">Logout</a></li>
             </ul>
         </nav>
     </header>
