--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -91,6 +91,7 @@
         <div id="private-link-container">
             <a href="/private/admin.html">Pagina admin</a>
             <a href="/private/user.html">Pagina user</a>
+            <a href="/api/cookie">test</a>
         </div>
         <div class="info">
             Esercizio: Login con JWT, Node.js e Express
