--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -3,37 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login JWT - Esercizio Node.js & Express</title>
+    <title>FILM</title>
     <script type="module" src="scripts/setup.js"></script>
 </head>
 <body>
     <h1>FILM: Film Is a Light Manager</h1>
     <div id="manager-container">
         <h2>Azioni Admin</h2>
-        <form action="/room-manager" method="GET">
+        <form action="/private/manager/room_manager.html" method="GET">
             <button type="submit">Gestion Sale</button>
         </form>
-        <form action="/film-manager" method="GET">
+        <form action="/private/manager/film_manager.html" method="GET">
             <button type="submit">Gestione Film</button>
         </form>
-        <form action="/screening-manager" method="GET">
+        <form action="/private/manager/screening_manager.html" method="GET">
             <button type="submit">Gestione Proiezioni</button>
         </form>
-        <form action="/user-manager" method="GET">
+        <form action="/private/manager/user_manager.html" method="GET">
             <button type="submit">Gestione Utenti</button>
         </form>
     </div>
     <div id="user-container">
         <h2>Azioni User</h2>
-        <form action="/user" method="GET">
-            <button type="submit">Area Riservata</button>
+        <form action="private/seats_choice.html" method="GET">
+            <button type="submit">Scegli il tuo posto</button>
         </form>
-        <form action="/booking" method="GET">
+        <form action="private/booking_manager.html" method="GET">
             <button type="submit">Sezione Acquisti</button>
         </form>
     </div>
     <div class="login-container">
-        <h2>Login JWT</h2>
+        <h2>Login</h2>
         <form id="form">
             <div class="form-group">
                 <label for="username">Nome utente</label>
@@ -48,14 +48,6 @@
         <div id="feedback-container">
             <h2>Feedback</h2>
             <p id="feedback"></p>
-        </div>
-        <div id="private-link-container">
-            <a href="/private/admin.html">Pagina admin</a>
-            <a href="/private/user.html">Pagina user</a>
-            <a href="/api/cookie">test</a>
-        </div>
-        <div class="info">
-            Esercizio: Login con JWT, Node.js e Express
         </div>
     </div>
 </body>
