aggiunto stile, integrazione completata

--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FILM</title>
+    <link href="/style/style.css" rel="stylesheet">
+    <style>
+        #manager-container form,
+        #user-container form {
+            margin-bottom: 16px;
+        }
+    </style>
     <script type="module" src="scripts/setup.js"></script>
 </head>
 <body>
