--- a/web-server/private/seats_choice.html
+++ b/web-server/private/seats_choice.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link href="/style/style.css" rel="stylesheet" type="text/css"></style>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>FILM</title>
 </head>
