--- a/web-server/private/index.html
+++ b/web-server/private/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Private Area</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/style/style.css" rel="stylesheet" type="text/css"></style>
+    <link href="/style/style.css" rel="stylesheet" type="text/css">
     <script src="scripts/setup.js" defer></script>
     <style>
         body { 
