aggiunto home button, tolti pulsanti inutili

--- a/web-server/private/booking_manager.html
+++ b/web-server/private/booking_manager.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link href="/style/style.css" rel="stylesheet"></style>
-  <title>Cinema Get-Modernissimo</title>
+  <title>Cinema Put-Modernissimo</title>
 </head>
 <body>
     <h1>Cosa ti va di guardare?</h1>
+    <button id="HomeButton" class="home-button" onclick="window.location.href='/'">Home</button>
     <div id="msgBox" class="error"></div>
     <div id="msgBox" class="success"></div>
 
