--- a/web-server/private/index.html
+++ b/web-server/private/index.html
@@ -38,6 +38,7 @@
 </head>
 <body>
     <div class="container">
+    <button id="HomeButton" class="home-button" onclick="window.location.href='/'">Home</button>
         <h1>Welcome to the Private Area</h1>
         <p>You are successfully logged in.</p>
         <form id="form">
