--- a/web-server/private/manager/film_manager.html
+++ b/web-server/private/manager/film_manager.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>Gestione Film</h1>
+  <button id="HomeButton" class="home-button" onclick="window.location.href='/'">Home</button>
 
   <h2>Aggiungi Film</h2>
   <form action="/films" method="POST">
