--- a/web-server/private/manager/room_manager.html
+++ b/web-server/private/manager/room_manager.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>Gestione Sale</h1>
+  <button id="HomeButton" class="home-button" onclick="window.location.href='/'">Home</button>
 
   <h2>Aggiungi Sala</h2>
   <form action="/rooms" method="POST">
