--- a/web-server/private/manager/screening_manager.html
+++ b/web-server/private/manager/screening_manager.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link href="/style/style.css" rel="stylesheet" type="text/css"></style>
-  <title>Gestione Sale Cinema</title>
+  <title>Gestione Proiezioni</title>
 </head>
 <body>
-    <h1>Gestione Sale</h1>
+    <h1>Gestione Proiezioni</h1>
+  <button id="HomeButton" class="home-button" onclick="window.location.href='/'">Home</button>
 
     <h2>Aggiungi Proiezione</h2>
     <form action="/screenings" method="POST">
