--- a/web-server/private/seats_choice.html
+++ b/web-server/private/seats_choice.html
@@ -7,6 +7,7 @@
   <title>FILM</title>
 </head>
 <body>
+  <button id="HomeButton" class="home-button" onclick="window.location.href='/'">Home</button>
   <div id="seatGrid"></div>
   <button id="purchaseBtn">Acquista</button>
 
